--- a/codekit-config.json
+++ b/codekit-config.json
@@ -404,6 +404,17 @@
       "initialSize" : 34181,
       "fileType" : 4096
     },
+    "\/public\/images\/bg_circle_challenge_sm.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/bg_circle_challenge_sm.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/bg_circle_challenge_sm.png",
+      "initialSize" : 282,
+      "fileType" : 8192
+    },
     "\/public\/casestudy3_image1.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -446,17 +457,6 @@
       "initialSize" : 163576,
       "fileType" : 4096
     },
-    "\/public\/images\/photo_mary-ramos@2x.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/photo_mary-ramos@2x.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/photo_mary-ramos@2x.jpg",
-      "initialSize" : 102682,
-      "fileType" : 4096
-    },
     "\/public\/js\/jquery-1.8.2.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -467,6 +467,17 @@
       "syntaxCheckerStyle" : 0,
       "outputAbbreviatedPath" : "\/public\/js\/jquery-1.8.2-min.js",
       "fileType" : 64
+    },
+    "\/public\/images\/photo_mary-ramos@2x.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/photo_mary-ramos@2x.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/photo_mary-ramos@2x.jpg",
+      "initialSize" : 102682,
+      "fileType" : 4096
     },
     "\/public\/images\/logo_medtronic.png" : {
       "ignoreWasSetByUser" : 0,
@@ -818,6 +829,17 @@
       "fileType" : 1,
       "debugStyle" : 0
     },
+    "\/public\/images\/bg_circle_result_sm.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/bg_circle_result_sm.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/bg_circle_result_sm.png",
+      "initialSize" : 293,
+      "fileType" : 8192
+    },
     "\/public\/bio_debra-jaff.html" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -836,15 +858,15 @@
       "outputAbbreviatedPath" : "\/No Output Path",
       "fileType" : 16
     },
-    "\/public\/images\/logo_medrad.png" : {
+    "\/public\/images\/foundation\/orbit\/mask-black.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
+      "inputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
       "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
-      "initialSize" : 2566,
+      "outputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
+      "initialSize" : 527,
       "fileType" : 8192
     },
     "\/public\/bio_gail-hadley.html" : {
@@ -867,26 +889,15 @@
       "initialSize" : 2541,
       "fileType" : 8192
     },
-    "\/public\/images\/foundation\/orbit\/mask-black.png" : {
+    "\/public\/images\/logo_medrad.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
+      "inputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
       "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/foundation\/orbit\/mask-black.png",
-      "initialSize" : 527,
-      "fileType" : 8192
-    },
-    "\/logo\/vascore-logo.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/logo\/vascore-logo.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/logo\/vascore-logo.png",
-      "initialSize" : 9390,
+      "outputAbbreviatedPath" : "\/public\/images\/logo_medrad.png",
+      "initialSize" : 2566,
       "fileType" : 8192
     },
     "\/public\/images\/logo_gore.png" : {
@@ -898,6 +909,17 @@
       "processed" : 0,
       "outputAbbreviatedPath" : "\/public\/images\/logo_gore.png",
       "initialSize" : 5122,
+      "fileType" : 8192
+    },
+    "\/logo\/vascore-logo.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/logo\/vascore-logo.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/logo\/vascore-logo.png",
+      "initialSize" : 9390,
       "fileType" : 8192
     },
     "\/public\/images\/logo_proteon.png" : {
@@ -957,17 +979,6 @@
       "initialSize" : 71870,
       "fileType" : 4096
     },
-    "\/public\/images\/photo_josh-beckman@2x.jpg" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman@2x.jpg",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman@2x.jpg",
-      "initialSize" : 76433,
-      "fileType" : 4096
-    },
     "\/public\/images\/scroll-to-top.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -978,6 +989,17 @@
       "outputAbbreviatedPath" : "\/public\/images\/scroll-to-top.png",
       "initialSize" : 5933,
       "fileType" : 8192
+    },
+    "\/public\/images\/photo_josh-beckman@2x.jpg" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman@2x.jpg",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/photo_josh-beckman@2x.jpg",
+      "initialSize" : 76433,
+      "fileType" : 4096
     },
     "\/public\/images\/casestudy3_image2.jpg" : {
       "ignoreWasSetByUser" : 0,
@@ -1100,6 +1122,17 @@
       "outputAbbreviatedPath" : "\/public\/js\/modernizr-2.6.2-min-min.js",
       "fileType" : 64
     },
+    "\/public\/images\/logo_abbott.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
+      "initialSize" : 2805,
+      "fileType" : 8192
+    },
     "\/public\/images\/infographic-circ-orange.png" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -1123,17 +1156,6 @@
       "strictImports" : 0,
       "fileType" : 1,
       "debugStyle" : 0
-    },
-    "\/public\/images\/logo_abbott.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/public\/images\/logo_abbott.png",
-      "initialSize" : 2805,
-      "fileType" : 8192
     },
     "\/public\/images\/logo_daiichi-sankyo.png" : {
       "ignoreWasSetByUser" : 0,
@@ -1255,6 +1277,17 @@
       "outputAbbreviatedPath" : "\/logo\/vascore_logoo_home.jpg",
       "initialSize" : 627912,
       "fileType" : 4096
+    },
+    "\/public\/images\/bg_circle_solution_sm.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/public\/images\/bg_circle_solution_sm.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/public\/images\/bg_circle_solution_sm.png",
+      "initialSize" : 294,
+      "fileType" : 8192
     },
     "\/public\/images\/bg_tab-services.png" : {
       "ignoreWasSetByUser" : 0,
